--- a/studytrack-frontend/src/app/components/navbar/navbar.component.html
+++ b/studytrack-frontend/src/app/components/navbar/navbar.component.html
@@ -4,8 +4,9 @@
   <span class="spacer"></span>
 
   <ng-container *ngIf="currentUser$ | async as user; else guest">
-    <span>{{ user.name }}</span>
     <button mat-button routerLink="/dashboard">Dashboard</button>
+    <button mat-button routerLink="/courses">Courses</button>
+    <span>{{ user.name }}</span>
     <button mat-button (click)="logout()">Logout</button>
   </ng-container>
 
