--- a/studytrack-frontend/src/app/pages/auth/register/register.component.html
+++ b/studytrack-frontend/src/app/pages/auth/register/register.component.html
@@ -26,7 +26,13 @@
         </mat-error>
       </mat-form-field>
 
-      <button mat-raised-button color="primary" class="full-width" type="submit" [disabled]="loading">
+      <button
+        mat-raised-button
+        color="primary"
+        class="full-width"
+        type="submit"
+        [disabled]="loading"
+      >
         Register
       </button>
 
