--- a/studytrack-frontend/src/app/components/navbar/navbar.component.html
+++ b/studytrack-frontend/src/app/components/navbar/navbar.component.html
@@ -7,6 +7,7 @@
     <button mat-button routerLink="/dashboard">Dashboard</button>
     <button mat-button routerLink="/courses">Courses</button>
     <button mat-button routerLink="/tasks">Tasks</button>
+    <button mat-button routerLink="/sessions">Sessions</button>
     <span>{{ user.name }}</span>
     <button mat-button (click)="logout()">Logout</button>
   </ng-container>
